# FMLive

./: 20201217174605618_bs2_format.svga  README.md  build_android.sh  configure
fmlive/app/: CMakeLists.txt  build.gradle
fmlive/app/src/androidTest/java/com/fmtech/fmlive/: ExampleInstrumentedTest.java
fmlive/app/src/main/: AndroidManifest.xml
fmlive/app/src/main/cpp/: native-lib.cpp  native-lib_2.cpp
fmlive/app/src/main/cpp/librtmp/: CMakeLists.txt
fmlive/app/src/main/java/com/fmtech/fmlive/: MainActivity.java
fmlive/app/src/main/java/com/fmtech/fmlive/params/: AudioParam.java  VideoParam.java
fmlive/app/src/main/java/com/fmtech/fmlive/push/: AudioPusher.java  LivePusher.java  PushNative.java  Pusher.java  VideoPusher.java
fmlive/app/src/main/res/layout/: activity_main.xml
fmlive/app/src/main/res/values/: strings.xml  styles.xml
fmlive/app/src/test/java/com/fmtech/fmlive/: ExampleUnitTest.java
fmlive/gradle/wrapper/: gradle-wrapper.properties
